--- a/tutorial.Rmd
+++ b/tutorial.Rmd
@@ -330,7 +330,8 @@ shiny::runApp(
 
 Add a file to your directly simply called Procfile (no file extension!). This is a file that tells Heroku what command to run when it starts up. Its a simple file, with only the following line of code,
 
-    web: env FAKECHROOT_EXCLUDE_PATH=/tmp:/bin bin/start-nginx fakechroot fakeroot chroot /app/.root /usr/bin/R -f /app/run.R --gui-none --no-save 
+    web: env FAKECHROOT_EXCLUDE_PATH=/tmp:/bin bin/start-nginx /app/bin/fakechroot /app/bin/fakeroot /app/bin/chroot /app/.root /app/R/lib/R/bin/R -f /app/run.R --gui-none --no-save 
+    
 
 #### Add nginx config
 
@@ -338,7 +339,7 @@ We need to add a custom config file so nginx works with Shiny. Create a `config/
 
 
     daemon off;
-    #Heroku dynos have at least 4 cores.
+    # Heroku dynos have at least 4 cores.
     worker_processes <%= ENV['NGINX_WORKERS'] || 4 %>;
     
     events {
@@ -362,7 +363,7 @@ We need to add a custom config file so nginx works with Shiny. Create a `config/
       default_type application/octet-stream;
       sendfile on;
       
-      #Must read the body in 5 seconds.
+      # Must read the body in 5 seconds.
       client_body_timeout 5;
       
       upstream app_server {
@@ -382,10 +383,10 @@ We need to add a custom config file so nginx works with Shiny. Create a `config/
         }
         
         location /websocket/ {
-            proxy_pass http://app_server;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
+          proxy_pass http://app_server;
+          proxy_http_version 1.1;
+          proxy_set_header Upgrade $http_upgrade;
+          proxy_set_header Connection "Upgrade";
         }
       }
     }
@@ -409,7 +410,7 @@ Now commit and push your new and improved app to heroku.
 
     $ git add *
     $ git commit -m "added nginx"
-    $ git push heroku
+    $ git push heroku master
 
 ***
 
