--- a/tutorial.Rmd
+++ b/tutorial.Rmd
@@ -13,6 +13,7 @@ output:
 ```{r setup, include=FALSE}
 library(pool)
 library(RPostgreSQL)
+library(shiny)
 
 knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(warning = FALSE)
