--- a/tutorial.Rmd
+++ b/tutorial.Rmd
@@ -30,10 +30,10 @@ This tutorial[^1] teaches you how to
   
 ## Requirements
 
-You'll need to install a lot of software if you haven't already.[^2] Let's assume that if you've gotten this far you've installed R + RStudio, but perhaps you haven't installed some of the Heroku specific requirements.
+You'll need to install a lot of software if you haven't already. Let's assume that if you've gotten this far you've installed R + RStudio, but perhaps you haven't installed some of the Heroku specific requirements.
 
   - [Git](https://git-scm.com/downloads)
-  - [Heroku command line tools](https://devcenter.heroku.com/articles/heroku-cli). You'll also need a [Heroku account](https://heroku.com).[^3]
+  - [Heroku command line tools](https://devcenter.heroku.com/articles/heroku-cli). You'll also need a [Heroku account](https://heroku.com).
   - [latest PostgresQL](https://www.enterprisedb.com/downloads/postgres-postgresql-downloads). **Huge note** when you install this, please make sure you remember your superuser password. For the sake of this tutorial, we will assume you set the password as **admin**.
 
 ## Your first Heroku app
@@ -1027,10 +1027,6 @@ Andrew.
 
 
 [^1]: I will leave the debate as to whether or not Heroku is an effective platform for hosting Shiny Apps to the cynics. For beginners, its super easy, and allows for database backend / more customizability than options such as ShinyApps.io. You can also layer on more advanced security features, add-ons, etc. 
-
-[^2]: If you are a Salesforce F&S user of this, you can refer to the [Quip doc](https://salesforce.quip.com/TkOlAkNxVWqJ) on how to install the core software required for this.
-
-[^3]: Salesforce F&S users, hello again, you'll need to create a Heroku account by going to this [link here](https://sso.heroku.com/saml/sfdc-aloha/init). Please also reference the Concierge article on [Heroku for SFDC Employees](https://concierge.it.salesforce.com/articles/en_US/Supportforce_Article/Heroku-for-SFDC-Employees) for common questions.
 
 [^4]: In Git speak to *commit* something is to save and back it up. To *push* is to upload that latest backup (*commit*) to the internet (i.e. Github), Github is referred to as *origin*. You can upload to different places on the internet by adding other *remotes*. A *remote* is simply a location on the internet you are uploading your code to. 
 
